# template_study

./: C++ 模板元编程.md
SFINAE/: SFINAE.cpp  test.cpp  test2.cpp
Specialization/: CMakeLists.txt  Specialization.cpp
Variadic_templates/: CMakeLists.txt  call_all_example.cpp  fold_examples.cpp  test_sub.cpp  variadic_templates.cpp
forward/: test.cpp
template/: Metaprogram.cpp  test.cpp
